set up and intro with basic animations using tweenLight, some animations still in css file, but not currently used

--- a/app/index.html
+++ b/app/index.html
@@ -17,24 +17,61 @@
         <script src="scripts/vendor/modernizr.min.js"></script>
     </head>
     <body>
-    <div class="container" style="margin-top:50px">
-        <div class="hero-unit">
-            <h1>Wotcha!</h1>
-            <p>You now have</p>
-            <ul>
-                <li>HTML5 Boilerplate</li>
-                <li>Twitter Bootstrap</li>
-                <li>RequireJS</li>
-                <li>Support for ES6 Modules</li>
-            </ul>
-            <p>installed.</p>
-            <h3>Enjoy coding! - Yeoman</h3>
+      <!--[if lt IE 7]>
+          <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
+      <![endif]-->
+      <div class="nav top-nav">
+      </div>
+      <div id="viewport">
+
+        <div class="panel panel1">
+          <div class="container over-container">
+            <div class="inner-container">
+              <div class="banner">
+                <header>
+                  <h1 class="text-on-bg text-on-bg-dark">
+                    We craft robust solutions to your business problems.
+                  </h1>
+                </header>
+              </div>
+            </div>
+          </div>
         </div>
+
+        <div class="panel panel2">
+          <div class="container over-container">
+            <div class="inner-container">
+              <div class="banner">
+                <header>
+                  <h1 class="text-on-bg text-on-bg-dark">
+                    Using the tools and techniques that best fit the problem space.
+                  </h1>
+                </header>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      <div class="panel panel3">
+        <div class="container over-container container3">
+          <div class="inner-container">
+            <div class="banner">
+              <header>
+                <h1 class="text-on-bg text-on-bg-dark">
+                  With a unique approach to staffing, which benefits us all.
+                </h1>
+              </header>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div><!-- Ends Viewport -->
+
+    <div class="footer">
+    
     </div>
 
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
-        <![endif]-->
 
         <!-- Add your site or application content here -->
 
